force-app/main/default/objects/Meeting_Event__e/Meeting_Event__e.object-meta.xml
<CustomObject>
    <description>Events related to meetings</description>
    <label>Meeting Event</label>
    <pluralLabel>Meeting Events</pluralLabel>
</CustomObject>