force-app/main/default/objects/Meeting_Event__e/fields/Bot_Id__c.field-meta.xml
<CustomField>
    <fullName>Bot_Id__c</fullName>
    <label>Bot Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>