force-app/main/default/objects/Meeting_Event__e/fields/Meeting_Event_Detail__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Event_Detail__c</fullName>
    <label>Meeting Event Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>