force-app/main/default/objects/Meeting_Event__e/fields/Meeting_Id__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Id__c</fullName>
    <description>ID of the meeting</description>
    <label>Meeting Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>