force-app/main/default/objects/Meeting_Event__e/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>Indicate the platform of the meeting</description>
    <label>Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>